--- a/ask/qa/templates/qa/ask.html
+++ b/ask/qa/templates/qa/ask.html
@@ -1,7 +1,7 @@
 {% extends "qa/base.html" %}
 
 {% block content %}
-
+<div> {{ user }} </div>
 <form method = "post" action="{% url 'ask' %}">
    {% csrf_token %}
   {{ form.as_p }}
